package tms.common.protocol.message;
message PatchClientRequest {
  required string version = 1;
  required string system = 2;
}