package tms.common.protocol.message;
message PatchClientResponse {
  required bytes patch_archive = 1;
}